2012-03-22  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/XGServerEvent.m: Make the GSModifiersAreKeys
	default to YES, by renaming the default to GSModifiersAreNotKeys.
	This should fix bug 25659; for example, in Ink you can now
	open the color panel with <Shift>+<Alt>+c or <Alt>+<Shift>+c.
	* Documentation/Back/DefaultsSummary.gsdoc: Update docs for
	GSModifiersAreNotKeys.

2012-02-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Set the filter to BILINEAR for all
	patterns we use.

2012-02-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/gsc/GSGState.m (-GSSetFillColor:, -GSSetStrokeColor:):
	Fix potentially uninitialized color space element when setting
	fill and stroke colors.

2012-02-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-compositerect:op:): Use difference
	operator only for cairo version >= 1.9.4.

2012-02-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32GState.m
	* Source/art/composite.m
	* Source/xlib/XGGState.m
	* Source/xdps/NSDPSContextOps.m: Replace NSCompositeHighlight with
	GSCompositeHighlight and map NSCompositeHighlight onto
	NSCompositeSourceOver.
	* Source/cairo/CairoGState.m (-compositerect:op:): Implement
	GSCompositeHighlight with the difference operator.

2012-02-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gbps.m: Add lots of debug information (have objects describe
	themselves and where they are in the data sturcture).
	Simplify code by removing cached information about which owners
	respond to which selectors (probably not needed on modern systems,
	and we could re-add this more simply if it turns out I'm wrong).

2012-02-03  Adam Fedor  <fedor@gnu.org>

	* Bump version

2012-02-03  Adam Fedor  <fedor@gnu.org>

	* Version 0.22.0
	* Update release notes

2012-01-23  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoFontInfo.m (-setupAttributes):
	use CAIRO_HINT_METRICS_ON instead of CAIRO_HINT_METRICS_OFF,